トップページのリンクを修正

--- a/03.html
+++ b/03.html
@@ -57,7 +57,7 @@
  	<ul id="menu">
 
 	<a>
-		<li><a href="/">トップページ</a></li>
+		<li><a href="/website/">トップページ</a></li>
 		<li><a href="02.html">サバイバル</a></li>
 		<li><a href="03.html">建築</a></li>
 	</a>
