--- a/index.html
+++ b/index.html
@@ -4,51 +4,13 @@
 
 <head>
 
-	<style>
 
-	#contents{
-		margin: auto;
-		width:1200px;
-		background-color:rgba(255,255,255,0.75);
-		padding: 30px;
-
-	}
-
-	body{
-		background-image:url("img_2.png");
-		background-size:cover;
-
-	}
-
-	header{
-		margin: auto;
-		width:1200px;
-		background-color:rgba(255,255,255,0.75);
-		color:red;
-		padding: 30px;
-	}
-
-	#menu {
-		display:flex;
-		list-style:none;
-	}
-
-
-	#menu li{
-		width:200px;
-		font-size:155%;
-
-	}
-
-
-
-	</style>
 
 	<mete charset="UTF-8">
 
 	<title>towa193の世界</title>
 
-
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -59,7 +21,7 @@
 	<h1>towa193の世界</h1>
 
  	<ul id="menu">
-
+\
 		<li><a href="/website/">トップページ</a></li>
 		<li><a href="02.html">サバイバル</a></li>
 		<li><a href="03.html">建築</a></li>
