--- a/03.html
+++ b/03.html
@@ -4,47 +4,11 @@
 
 <head>
 
-	<style>
-
-	#contents{
-		margin: auto;
-		width:1200px;
-		background-color:rgba(255,255,255,0.75);
-		padding: 30px;
-
-	}
-
-	body{
-		background-image:url("img_2.png");
-		background-size:cover;
-
-	}
-
-	header{
-		margin: auto;
-		width:1200px;
-		background-color:rgba(255,255,255,0.75);
-		color:red;
-		padding: 30px;
-	}
-
-	#menu li{
-		width:200px;
-		font-size:155%;
-	}
-
-	#menu {
-		display:flex;
-		list-style:none;
-	}
-
-	</style>
-
 	<mete charset="UTF-8">
 
 	<title>towa193の世界 建築</title>
 
-
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
