キーワードタグを追加

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <head>
 
-
-
 	<mete charset="UTF-8">
 
 	<title>towa193の世界</title>
+
+<meta name="keywords" content="マイクラ,マインクラフト,minecraft,1.15,towa193の世界">
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
