説明文作成

--- a/02.html
+++ b/02.html
@@ -9,6 +9,8 @@
 
 	<title>towa193の世界　サバイバル</title>
 
+		<meta name="description" ="ここではサバイバルについて紹介します。">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
