--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 	<title>towa193の世界</title>
 
+		<meta name="description" ="どうもこんにちわ今週からサイトを書くことにしました。このサイトは主にマイクラについて紹介します">
+
 <meta name="keywords" content="マイクラ,マインクラフト,minecraft,1.15,towa193の世界">
 
 <link rel="stylesheet" type="text/css" href="style.css">
