文章ちょっと修正

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 	<title>towa193の世界</title>
 
-		<meta name="description" ="どうもこんにちわ今週からサイトを書くことにしました。このサイトは主にマイクラについて紹介します">
+		<meta name="description" ="どうもこんにちわ第二回目のサイトを書くことにしました。このサイトは主にマイクラについて紹介します">
 
-<meta name="keywords" content="マイクラ,マインクラフト,minecraft,1.15,towa193の世界">
+<meta name="keywords" content="マイクラ,マインクラフト,minecraft,1.15,井草,とわ１９３のせかい,とわ,towa193の世界">
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -33,33 +33,9 @@
 
 	<div id="contents">
 
-	<h2>マイクラのサイトはじめました</h2>
+<h3>二回目更新しました<h3>
 
-	<p>こんにちは今日からマインクラフトについてのサイトを書くことにしました。</p>
-
-　　　	<img src="img_1.png">
-
-	<h2>
-
-	自己紹介
-
-	</h2>
-
-	<p>僕は小さい頃からマインクラフトをやっていてもう何年間かやっています。<br>
-	なのでマインクラフトのことは意外と知っています。なのでマイクラのことに<br>
-	ついて紹介するコーナーでしょうかいしようとおもいます。よろしくおねがいします。<br>
-	これから週３に一回更新したいと思います。もしも更新できなかったらごめんなさい</p>
-
-	<h2>
-
-	マインクラフトのことについて
-
-	</h2>
-
-	<p>マインクラフトとはMojang・マイクロソフトが開発していて販売してるゲームである<br>
-	今年で１０周年を迎えてるゲーム冒険をしたり畑を作って収穫したりいるんな建物を作ったり<br>
-	ワールドを観光したりできるゲームでmodを入れたりするといつものマイクラに追加要素<br>
-	を入れることができるゲームです</p>
+	
 
 	<h3>おまけ</3> <p>映画館をイメージして波が動く機械を作りました今度作り方を紹介します</p>
 
