--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
 
 	<div id="contents">
 
-<h3>二回目更新しました<h3>
+<p>二回目更新しました</p>
 
-	
+<p>19w46aアプデキターーー何が変わったかわからないけど多分1.15へ近づいたのならまだ良い<br>
+	1.15が待ち遠しーーー今回は追加されたアイテムを紹介します。</p>
+
+	<p>sss</p>	
 
 	<h3>おまけ</3> <p>映画館をイメージして波が動く機械を作りました今度作り方を紹介します</p>
 
