--- a/index.html
+++ b/index.html
@@ -38,22 +38,13 @@
 <p>19w46aアプデキターーー何が変わったかわからないけど多分1.15へ近づいたのならまだ良い<br>
 	1.15が待ち遠しーーー今回は追加されたアイテムを紹介します。</p>
 
-	<p>sss</p>	
+	<p>1 ハニーブロック　これはスライムブロックのはねないバージョンです。</p>
 
-	<h3>おまけ</3> <p>映画館をイメージして波が動く機械を作りました今度作り方を紹介します</p>
 
-	<img src="img_3.png">
+　 <p>2　ハニカムブロック　これはあまり何かはわかりません</p>
 
-	<p>木陰で寝てたキツネ</p>
-
-	<img src="img_4.png">
-
-	<p>1.15で追加される蜂の巣（木のした）</p>
-
-	<img src="img_5.png">
-
-	</div>
-
+　	</div>
+　
 </body>
 
 </html>
