--- a/02.html
+++ b/02.html
@@ -43,19 +43,19 @@
 
 	</h2>
 
-	<p>ここではサバイバルでやることを順番に紹介します。今回は１から１０までのやること<br>
-	紹介します。そして週３に一回更新したいと思います</p>
+	<p>ここではサバイバルでやることを順番に紹介します。今回は１から２０までのやること<br>
+	紹介します。そして2ヶ月間に一回更新したいと思います</p>
 
-		<h2>１番</h2><p>原木を取る。</p>
-		<h2>２番</h2><p>作業台を作る。</p>
-		<h2>３番</h2><p>木のツールを作る。（木のツルハシ・木の斧）</p>
-		<h2>４番</h2><p>羊を倒す。</p>
-		<h2>５番</h2><p>ベットを作る。</p>
-		<h2>６番</h2><p>地面に穴を掘る。</p>
-		<h2>７番</h2><p>丸石を採掘する。</p>
-		<h2>８番</h2><p>かまどを作る。</p>
-		<h2>９番</h2><p>ベッドで寝る。</p>
-		<h2>１０番</h2><p>石のツールを作る。（石のツルハシ・石の斧・石の剣・石のクワ）</p>
+		<p>1番原木を取る。</p>
+		<p>２番作業台を作る。</p>
+		<p>３番木のツールを作る。（木のツルハシ・木の斧）</p>
+		<p>４番羊を倒す。</p>
+		<p>５番ベットを作る。</p>
+		<p>6番地面に穴を掘る。</p>
+		<p>７番丸石を採掘する。</p>
+  	<p>８番かまどを作る。</p>
+		<p>９番ベッドで寝る。</p>
+		<p>１０番石のツールを作る。（石のツルハシ・石の斧・石の剣・石のクワ）</p>
 
 	</div>
 
