０２パート２続き

--- a/02.html
+++ b/02.html
@@ -56,6 +56,16 @@
   	<p>８番かまどを作る。</p>
 		<p>９番ベッドで寝る。</p>
 		<p>１０番石のツールを作る。（石のツルハシ・石の斧・石の剣・石のクワ）</p>
+    <p>１１仮拠点を作る。</p>
+		<p>１２畑を作る。</p>　
+		<p>１３洞窟を探索する。</p>
+		<p>１４鉄鉱石を精錬する。</p>
+		<p>１５チェストを作りアイテムを入れる。</p>
+		<p>１６バケツを作る。</p>
+		<p>１７鉄のアイテムを作る。（鉄の装備・鉄の道具・鉄の剣・盾など）</p>
+		<p>１８長距離遠征で村を見つける。</p>
+		<p>１９できれば村の近くに家を作る。</p>
+		<p>２０ブランチマイニングをしてダイヤモンドなど鉱石を取る。</p>
 
 	</div>
 
