--- a/index.html
+++ b/index.html
@@ -33,6 +33,36 @@
 
 	<div id="contents">
 
+  <meta name="description" ="どうもこんにちわ今週からサイトを書くことにしました。このサイトは主にマイクラについて紹介します">
+
+		<h2>マイクラのサイトはじめました</h2>
+
+		<p>こんにちは今日からマインクラフトについてのサイトを書くことにしました。</p>
+
+　　　	<img src="img_1.png">
+
+	<h2>
+
+	自己紹介
+
+	</h2>
+
+	<p>僕は小さい頃からマインクラフトをやっていてもう何年間かやっています。<br>
+	なのでマインクラフトのことは意外と知っています。なのでマイクラのことに<br>
+	ついて紹介するコーナーでしょうかいしようとおもいます。よろしくおねがいします。<br>
+	これから週３に一回更新したいと思います。もしも更新できなかったらごめんなさい</p>
+
+	<h2>
+
+	マインクラフトのことについて
+
+	</h2>
+
+	<p>マインクラフトとはMojang・マイクロソフトが開発していて販売してるゲームである<br>
+	今年で１０周年を迎えてるゲーム冒険をしたり畑を作って収穫したりいるんな建物を作ったり<br>
+	ワールドを観光したりできるゲームでmodを入れたりするといつものマイクラに追加要素<br>
+	を入れることができるゲームです</p>                      
+
 <p>二回目更新しました</p>
 
 <p>19w46aアプデキターーー何が変わったかわからないけど多分1.15へ近づいたのならまだ良い<br>
