--- a/03.html
+++ b/03.html
@@ -56,8 +56,43 @@
 
 	<img src="img_13.png">
 
+		<h2><p>映画館</p></h2>
 
+		<p>まず１チャンク(16×16)をかこう</p>
 
+	<img src="img＿１４png">
+
+ <p>下の写真のようにします</p>
+
+ 	<img src="img_15png">
+
+	<p>ステンドガラスを作ります</p>
+
+	<img src="img_16png">
+
+	<p>下の写真のようにレッドストーンを組みます</p>
+
+	<img src="img_17png">
+
+	<p>背景と波の部分を作ります</p>
+
+	<img src="img_18png">
+
+	<p>上に明かりを作ります</p>
+
+	<img src="img_19png">
+
+	<p>あとは自分なりに内装します僕はこのようにしました</p>
+
+	<img src="img＿２１png">
+
+	<p>後ろはの部分は隠して波が動くスイッチを作ります</p>
+
+		<img src="img_20png">
+
+		<p>そして中にモブを入れたり見えないところに音が鳴り続ける機械を作ります</p>
+
+		<img src="img_21png">
 
 </body>
 
