間違い直し

--- a/03.html
+++ b/03.html
@@ -60,39 +60,39 @@
 
 		<p>まず１チャンク(16×16)をかこう</p>
 
-	<img src="img＿１４png">
+	<img src="img＿１４.png">
 
  <p>下の写真のようにします</p>
 
- 	<img src="img_15png">
+ 	<img src="img_15.png">
 
 	<p>ステンドガラスを作ります</p>
 
-	<img src="img_16png">
+	<img src="img_16.png">
 
 	<p>下の写真のようにレッドストーンを組みます</p>
 
-	<img src="img_17png">
+	<img src="img_17.png">
 
 	<p>背景と波の部分を作ります</p>
 
-	<img src="img_18png">
+	<img src="img_18.png">
 
 	<p>上に明かりを作ります</p>
 
-	<img src="img_19png">
+	<img src="img_19.png">
 
 	<p>あとは自分なりに内装します僕はこのようにしました</p>
 
-	<img src="img＿２１png">
+	<img src="img＿２１.png">
 
 	<p>後ろはの部分は隠して波が動くスイッチを作ります</p>
 
-		<img src="img_20png">
+		<img src="img_20.png">
 
 		<p>そして中にモブを入れたり見えないところに音が鳴り続ける機械を作ります</p>
 
-		<img src="img_21png">
+		<img src="img_21.png">
 
 </body>
 
