--- a/03.html
+++ b/03.html
@@ -60,7 +60,7 @@
 
 		<p>まず１チャンク(16×16)をかこう</p>
 
-	<img src="img＿１４.png">
+	<img src="img_14png">
 
  <p>下の写真のようにします</p>
 
@@ -84,15 +84,15 @@
 
 	<p>あとは自分なりに内装します僕はこのようにしました</p>
 
-	<img src="img＿２１.png">
+	<img src="img_21.png">
 
 	<p>後ろはの部分は隠して波が動くスイッチを作ります</p>
 
-		<img src="img_20.png">
+		<img src="img_22.png">
 
 		<p>そして中にモブを入れたり見えないところに音が鳴り続ける機械を作ります</p>
 
-		<img src="img_21.png">
+		<img src="img_23.png">
 
 </body>
 
