第三目の更新サバイバル

--- a/02.html
+++ b/02.html
@@ -46,26 +46,38 @@
 	<p>ここではサバイバルでやることを順番に紹介します。今回は１から２０までのやること<br>
 	紹介します。そして2ヶ月間に一回更新したいと思います</p>
 
-		<p>1番原木を取る。</p>
-		<p>２番作業台を作る。</p>
-		<p>３番木のツールを作る。（木のツルハシ・木の斧）</p>
-		<p>４番羊を倒す。</p>
-		<p>５番ベットを作る。</p>
-		<p>6番地面に穴を掘る。</p>
-		<p>７番丸石を採掘する。</p>
-  	<p>８番かまどを作る。</p>
-		<p>９番ベッドで寝る。</p>
-		<p>１０番石のツールを作る。（石のツルハシ・石の斧・石の剣・石のクワ）</p>
-    <p>１１仮拠点を作る。</p>
-		<p>１２畑を作る。</p>
-		<p>１３洞窟を探索する。</p>
-		<p>１４鉄鉱石を精錬する。</p>
-		<p>１５チェストを作りアイテムを入れる。</p>
-		<p>１６バケツを作る。</p>
-		<p>１７鉄のアイテムを作る。（鉄の装備・鉄の道具・鉄の剣・盾など）</p>
-		<p>１８長距離遠征で村を見つける。</p>
-		<p>１９できれば村の近くに家を作る。</p>
-		<p>２０ブランチマイニングをしてダイヤモンドなど鉱石を取る。</p>
+		<p>1	原木を取る。</p>
+		<p>２	作業台を作る。</p>
+		<p>３	木のツールを作る。（木のツルハシ・木の斧）</p>
+		<p>４	羊を倒す。</p>
+		<p>５	ベットを作る。</p>
+		<p>6	地面に穴を掘る。</p>
+		<p>７	丸石を採掘する。</p>
+  	<p>８	かまどを作る。</p>
+		<p>９	ベッドで寝る。</p>
+		<p>１０	番石のツールを作る。（石のツルハシ・石の斧・石の剣・石のクワ）</p>
+    <p>１１	仮拠点を作る。</p>
+		<p>１２	畑を作る。</p>
+		<p>１３	洞窟を探索する。</p>
+		<p>１４	鉄鉱石を精錬する。</p>
+		<p>１５　鉄を集める</p>
+		<p>１６	バケツを作る。</p>
+		<p>１７	鉄のアイテムを作る。（鉄の装備・鉄の道具・鉄の剣・盾など）</p>
+		<p>１８	長距離遠征で村を見つける。</p>
+		<p>１９	できれば村の近くに家を作る。</p>
+		<p>２０	ブランチマイニングでダイヤモンドを集める</p>
+		<p>２１	ダイヤモンド３個以上集めツルハシを作る。</p>
+		<p>２２	ダイヤのツルハシで黒曜石を１３個以上集める</p>
+		<p>２３	本一冊とダイヤモンド２個と黒曜石３つでエンチャント台を作る。</p>
+	  <p>２４	ダイヤのツルハシか鉄のツルハシにエンチャント。</p>
+		<p>２５	またブランチマイニングでダイヤモンドを集める。</p>
+	　<p>２６	かなり集まったらダイヤのアイテムを作る。（ダイヤの装備・ダイヤの道具・ダイヤの武具）</p>
+		<p>２７	ネザーゲートを作る。</p>
+		<p>２８	ネザーゲートの中に入る</p>
+		<p>２９	ネザーゲートの周りを丸石で覆う</p>
+		<p>３０	ネザーを探索</p>
+
+
 
 
 	</div>
