--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<p>マインクラフトとはMojang・マイクロソフトが開発していて販売してるゲームである<br>
 	今年で１０周年を迎えてるゲーム冒険をしたり畑を作って収穫したりいるんな建物を作ったり<br>
 	ワールドを観光したりできるゲームでmodを入れたりするといつものマイクラに追加要素<br>
-	を入れることができるゲームです</p>                      
+	を入れることができるゲームです</p>
 
 <p>二回目更新しました</p>
 
@@ -72,6 +72,15 @@
 
 
 　 <p>2　ハニカムブロック　これはあまり何かはわかりません</p>
+
+ <p>三回目更新しました</p>
+
+ <p>マイクラ20w10aアップデートキターーー</p>
+
+ <img src="img_26.png">
+
+
+　<p></p>
 
 　	</div>
 　
