--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<title>towa193の世界</title>
 
-		<meta name="description" ="どうもこんにちわ第二回目のサイトを書くことにしました。このサイトは主にマイクラについて紹介します">
+		<meta name="description" ="どうもこんにちわ第三回目のサイトを書くことにしました。このサイトは主にマイクラについて紹介します">
 
 <meta name="keywords" content="マイクラ,マインクラフト,minecraft,1.15,井草,とわ１９３のせかい,とわ,towa193の世界">
 
